--- a/shopweb/web/templates/productquickview.html
+++ b/shopweb/web/templates/productquickview.html
@@ -97,8 +97,8 @@
               	<div class="row">
                   <label for="edit_description" data-loc="description"></label>
                   <div id="edit_toggle_desc" class="clickable right">
-                     <div class="toggle_text" data-loc="view"></div>
-                     <div class="toggle_text hidden" data-loc="edit"></div>
+                     <div class="edit_toggle_text" data-loc="view"></div>
+                     <div class="edit_toggle_text hidden" data-loc="edit"></div>
                   </div>
                 </div>
                 <textarea class="edit_toggle" id="edit_description" name="edit_description"></textarea>
