--- a/shopweb/web/static/css/style.css
+++ b/shopweb/web/static/css/style.css
@@ -559,6 +559,7 @@ a:active {
     padding: 0 0 20px;
     float: left;
     position: relative;
+    width: 100%;
 }
 
 .upload_form_fields textarea, .preview {
@@ -853,8 +854,8 @@ a:active {
 .specs_title {
   font-size: 16px;
   float: left;
-  margin-top: 5px;
   margin-right: 10px;
+  margin-top: 5px;
 }
 
 .specs .row {
@@ -864,6 +865,10 @@ a:active {
 #prop_fields input, #edit_prop_fields input {
   width: 220px;
   float: left;
+}
+
+.clickable {
+  font-size: 16px;
 }
 
 .clickable:hover {
@@ -893,4 +898,8 @@ a:active {
 
 .hidden {
   display: none;
+}
+
+.create_toggle_text, .edit_toggle_text {
+  margin-top: 5px;
 }
