--- a/shopweb/web/templates/productslist.html
+++ b/shopweb/web/templates/productslist.html
@@ -1,6 +1,6 @@
 
 <ul>
-  <li data-snip="itemadd" id="itemadd">
+  <li data-permissions="write>
     <div class="item_box">
       <img class="add_item" src="/static/images/add-item.png" />
     </div>
