--- a/shopweb/web/templates/common.html
+++ b/shopweb/web/templates/common.html
@@ -20,6 +20,9 @@
         <div id="title_text">
           <h1 data-snip="title"></h1>
         </div>
+        <div id="logout" data-permissions="write">
+          <a href="#" ><img src="/static/images/logout.png" /></a>
+        </div>
         <div id="search">
           <div>
             <input id="search_text" type="text" />
