--- a/shopweb/web/templates/productslist.html
+++ b/shopweb/web/templates/productslist.html
@@ -1,6 +1,6 @@
 
 <ul>
-  <li data-permissions="write>
+  <li data-permissions="write">
     <div class="item_box">
       <img class="add_item" src="/static/images/add-item.png" />
     </div>
@@ -8,7 +8,7 @@
   <li data-snip="item">
     <div class="item_box">
       <div class="edit_tag">
-         <div class="edit_tag_close">
+         <div class="edit_tag_close" data-permissions="write">
             <img src="/static/images/close.png" />
          </div>
       </div>
