--- a/shopweb/web/templates/productquickview.html
+++ b/shopweb/web/templates/productquickview.html
@@ -3,7 +3,7 @@
   <div class="title_dialog">
     <h1 data-snip="title"></h1>
   </div>
-  <div class="close_dialog">
+  <div class="close_product_dialog">
     <img src="/static/images/close.png" />
   </div>
   <div class="content_dialog">
