--- a/shopweb/web/static/css/style.css
+++ b/shopweb/web/static/css/style.css
@@ -194,6 +194,7 @@ a:active {
 
 .cat_box:hover > .info_tag {
     background : #000000;
+    opacity: 0.7;
 }
 
 .cat_box:hover > .info_tag div {
@@ -214,6 +215,15 @@ a:active {
 
 .item_box:hover > .info_tag {
     background : #000000;
+    opacity: 0.7;
+}
+
+.item_box:hover > .edit_tag .edit_tag_close, .item_box:hover > .edit_tag .edit_tag_update  {
+    display: block;
+}
+
+.cat_box:hover > .edit_tag .edit_tag_close, .cat_box:hover > .edit_tag .edit_tag_update  {
+    display: block;
 }
 
 
@@ -230,14 +240,14 @@ a:active {
 }
 
 .info_tag {
-	position: relative;
-	width: 100%;
-	height: 70px;
-	top: 256px;
-	margin: 0px;
-	background: rgba(255, 255, 255, .6);
-	box-shadow: 0px 0px 35px 1px #dddddd;
-	border-radius: 0 0 10px 10px;
+    background: none repeat scroll 0 0 rgba(255, 255, 255, 0.6);
+    border: 1px solid #dddddd;
+    border-radius: 0 0 10px 10px;
+    height: 68px;
+    margin: 0;
+    position: relative;
+    top: 256px;
+    width: 310px;
 }
 
 .edit_tag {
@@ -251,6 +261,7 @@ a:active {
     float: right;
     top: 5px;
     padding-left: 5px;
+    display: none;
 }
 
 .info_tag_price {
@@ -331,7 +342,7 @@ a:active {
 }
 
 #cart_content {
-	width: 420px;
+	width: 380px;
 	max-height: 460px;
 	padding: 20px;
 	float: left;
@@ -369,7 +380,6 @@ a:active {
 	width: 300px;
 	font-size: 16px;
 }
-
 
 #add_to_cart_box {
 	float: left;
@@ -543,7 +553,7 @@ a:active {
 
 .row {
 	height: 35px;
-	margin-right: 10px;
+	text-align: left;
 }
 
 .upload_form_fields .row {
@@ -651,15 +661,7 @@ a:active {
   background : url('/static/images/user.png');
 }
 
-#user_symbol:hover {
-  background : url('/static/images/user-light.png');
-}
-
-#logout, #user_symbol {
-  margin-top: 5px;
-}
-
-#search, #logout, #user_symbol {
+.top_items {
 	position: relative;
 	float: right;
 	margin-right: 10px;
@@ -790,7 +792,7 @@ a:active {
 	padding: 20px;
 }
 
-#product_dialog, #product_create_dialog, #category_create_dialog, #category_update_dialog {
+#product_dialog, #product_create_dialog, #category_create_dialog, #category_update_dialog, #newuser_popup {
 	display: none;
 	padding: 10px;
 }
@@ -808,12 +810,12 @@ a:active {
 	z-index: 999;
 }
 
-.close_dialog {
+.close_dialog, .close_product_dialog {
 	float: right;
 	position: relative;
 }
 
-.close_dialog:hover {
+.close_dialog:hover, .close_product_dialog:hover {
 	cursor: pointer;
 }
 
@@ -962,4 +964,30 @@ a:active {
 .auth * {
   float: right;
   margin-top: 10px;
+}
+
+.top5 {
+  margin-top: 5px;
+}
+
+.top10 {
+  margin-top: 10px;
+}
+
+.top20 {
+  margin-top: 20px;
+}
+
+.left10 {
+  margin-left: 10px;
+  position: relative;
+}
+
+.right20 {
+  margin-right: 20px;
+  position: relative;
+}
+
+.bordertop {
+  border-top: 1px solid #cccccc;
 }
