--- a/shopweb/web/static/css/style.css
+++ b/shopweb/web/static/css/style.css
@@ -377,7 +377,7 @@ a:active {
 	color: #000000;
 	opacity: 0.95;
 	padding: 10px;
-	width: 300px;
+	width: 320px;
 	font-size: 16px;
 }
 
@@ -553,27 +553,17 @@ a:active {
 
 .row {
 	height: 35px;
+	width: 100%;
 	text-align: left;
 }
 
 .upload_form_fields .row {
-	width: 100%;
-	height: 35px;
 	margin-right: 10px;
 }
 
 .upload_form_fields .row img {
     position: relative;
     top: 5px;
-}
-
-.form_specs .row {
- 	width: 100%;
-}
-
-.prod_specs .row {
-	width: 100%;
-	height: 35px;
 }
 
 .prod_specs .column1 {
@@ -827,6 +817,7 @@ a:active {
 
 .content_dialog {
 	clear: both;
+	font-size: 16px;
 }
 
 .dialog_footer {
@@ -904,10 +895,6 @@ a:active {
   margin-top: 5px;
 }
 
-.specs .row {
-  width: 100%;
-}
-
 #prop_fields input, #edit_prop_fields input {
   width: 220px;
   float: left;
@@ -983,6 +970,12 @@ a:active {
   position: relative;
 }
 
+.left30 {
+  margin-left: 30px;
+  position: relative;
+}
+
+
 .right20 {
   margin-right: 20px;
   position: relative;
@@ -990,4 +983,8 @@ a:active {
 
 .bordertop {
   border-top: 1px solid #cccccc;
+}
+
+.userinputs {
+  width: 360px;
 }
